# email_newsletter

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
migrations/: 20260602094322_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  health_test.rs
