[package]
name = "actixweb_email_newsletter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
reqwest = "0.13.4"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]