[package]
name = "actixweb_email_newsletter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3" #We are using tracing-bunyan-formatter instead of the formatting layer provided by tracing-subscriber because the latter does not implement metadata inheritance: it would therefore fail to meet our requirements
tracing-log = "0.1" # this is for log to tracing 
secrecy = { version = "0.8", features = ["serde"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
reqwest = "0.13.4"
once_cell = "1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]